trunk/Source/include/GLS_CUDA_RunTime.hpp



enum TcudaError : unsigned int { cudaSuccess, cudaErrorMissingConfiguration, cudaErrorMemoryAllocation, cudaErrorInitializationError, cudaErrorLaunchFailure, cudaErrorPriorLaunchFailure, cudaErrorLaunchTimeout, cudaErrorLaunchOutOfResources, cudaErrorInvalidDeviceFunction, cudaErrorInvalidConfiguration, cudaErrorInvalidDevice, cudaErrorInvalidValue, cudaErrorInvalidPitchValue, cudaErrorInvalidSymbol, cudaErrorMapBufferObjectFailed, cudaErrorUnmapBufferObjectFailed, cudaErrorInvalidHostPointer, cudaErrorInvalidDevicePointer, cudaErrorInvalidTexture, cudaErrorInvalidTextureBinding, cudaErrorInvalidChannelDescriptor, cudaErrorInvalidMemcpyDirection, cudaErrorAddressOfConstant, cudaErrorTextureFetchFailed, cudaErrorTextureNotBound, cudaErrorSynchronizationError, 
	cudaErrorInvalidFilterSetting, cudaErrorInvalidNormSetting, cudaErrorMixedDeviceExecution, cudaErrorCudartUnloading, cudaErrorUnknown, cudaErrorNotYetImplemented, cudaErrorMemoryValueTooLarge, cudaErrorInvalidResourceHandle, cudaErrorNotReady, cudaErrorStartupFailure, cudaErrorApiFailureBase };


enum TCudaChannelFormatKind : unsigned int { cudaChannelFormatKindSigned, cudaChannelFormatKindUnsigned, cudaChannelFormatKindFloat };


enum TCudaGLMapFlags : unsigned int { cudaGLMapFlagsNone, cudaGLMapFlagsReadOnly, cudaGLMapFlagsWriteDiscard };


struct TCudaChannelFormatDesc;

typedef TCudaChannelFormatDesc *PcudaChannelFormatDesc;


struct DECLSPEC_DRECORD TCudaChannelFormatDesc
{
public:
	int x;
	int y;
	int z;
	int w;
	TCudaChannelFormatKind f;
};



struct DECLSPEC_DRECORD TcudaArray
{
};



enum TcudaMemcpyKind : unsigned int { cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost, cudaMemcpyDeviceToDevice };


struct DECLSPEC_DRECORD TcudaPitchedPtr
{
public:
	void *ptr;
	NativeUInt pitch;
	NativeUInt xsize;
	NativeUInt ysize;
};



struct DECLSPEC_DRECORD TcudaExtent
{
public:
	NativeUInt width;
	NativeUInt height;
	NativeUInt depth;
};



struct DECLSPEC_DRECORD TcudaPos
{
public:
	NativeUInt x;
	NativeUInt y;
	NativeUInt z;
};



struct DECLSPEC_DRECORD TcudaMemcpy3DParms
{
public:
	void *srcArray;
	TcudaPos srcPos;
	TcudaPitchedPtr srcPtr;
	void *dstArray;
	TcudaPos dstPos;
	TcudaPitchedPtr dstPtr;
	TcudaExtent extent;
	TcudaMemcpyKind kind;
};



struct TCudaDeviceProp;

typedef TCudaDeviceProp *PCudaDeviceProp;


struct DECLSPEC_DRECORD TCudaDeviceProp
{
public:
	System::StaticArray<char, 256> name;
	NativeUInt totalGlobalMem;
	NativeUInt sharedMemPerBlock;
	int regsPerBlock;
	int warpSize;
	NativeUInt memPitch;
	int maxThreadsPerBlock;
	System::StaticArray<int, 3> maxThreadsDim;
	System::StaticArray<int, 3> maxGridSize;
	int clockRate;
	NativeUInt totalConstMem;
	int major;
	int minor;
	NativeUInt textureAlignment;
	int deviceOverlap;
	int multiProcessorCount;
	int kernelExecTimeoutEnabled;
	int egrated;
	int canMapHostMemory;
	int computeMode;
	int maxTexture1D;
	System::StaticArray<int, 2> maxTexture2D;
	System::StaticArray<int, 3> maxTexture3D;
	System::StaticArray<int, 3> maxTexture2DArray;
	NativeUInt surfaceAlignment;
	int concurrentKernels;
	int ECCEnabled;
	int pciBusID;
	int pciDeviceID;
	int tccDriver;
	System::StaticArray<int, 21> __cudaReserved;
};



enum TcudaTextureAddressMode : unsigned int { cudaAddressModeWrap, cudaAddressModeClamp, cudaAddressModeMirror };


enum TcudaTextureFilterMode : unsigned int { cudaFilterModePoint, cudaFilterModeLinear };


enum TcudaTextureReadMode : unsigned int { cudaReadModeElementType, cudaReadModeNormalizedFloat };


struct TTextureReference;

typedef TTextureReference *PTextureReference;


struct DECLSPEC_DRECORD TTextureReference
{
public:
	int normalized;
	TcudaTextureFilterMode filterMode;
	System::StaticArray<TcudaTextureAddressMode, 3> addressMode;
	TCudaChannelFormatDesc channelDesc;
	System::StaticArray<int, 16> __cudaReserved;
};



typedef TcudaArray *PcudaArray;


typedef TcudaError cudaError_t;


typedef int cudaStream_t;


typedef int cudaEvent_t;

extern PACKAGE float CUDART_INF_F;

extern PACKAGE float CUDART_NAN_F;

extern PACKAGE float CUDART_MIN_DENORM_F;

extern PACKAGE float CUDART_MAX_NORMAL_F;

extern PACKAGE float CUDART_NEG_ZERO_F;

#define CUDART_ZERO_F  (0.000000E+00)
#define CUDART_ONE_F  (1.000000E+00)

#define CUDART_TWO_TO_23_F  (8.388608E+06)
#define CUDART_TWO_TO_24_F  (1.677722E+07)
#define CUDART_TWO_TO_31_F  (2.147484E+09)
#define CUDART_TWO_TO_32_F  (4.294967E+09)

#define CUDART_TRIG_PLOSS_F  (4.803900E+04)
extern PACKAGE double CUDART_INF;

extern PACKAGE double CUDART_NAN;

extern PACKAGE double CUDART_NEG_ZERO;

extern PACKAGE double CUDART_MIN_DENORM;

#define CUDART_ZERO  (0.000000E+00)
#define CUDART_ONE  (1.000000E+00)

#define CUDART_TWO_TO_23  (8.388608E+06)

#define CUDART_TRIG_PLOSS  (2.147484E+09)
extern PACKAGE TcudaError __stdcall (*cudaBindTexture)(NativeUInt &offset, const PTextureReference texref, void * &devPtr, TCudaChannelFormatDesc &desc, NativeUInt size);

extern PACKAGE TcudaError __stdcall (*cudaBindTexture2D)(NativeUInt &offset, const PTextureReference texref, const void * devPtr, TCudaChannelFormatDesc &desc, NativeUInt width, NativeUInt height, NativeUInt pitch);

extern PACKAGE TcudaError __stdcall (*cudaBindTextureToArray)(const PTextureReference texref, const PcudaArray cudaArray);

extern PACKAGE TcudaError __stdcall (*cudaUnbindTexture)(const PTextureReference texref);

extern PACKAGE TcudaError __stdcall (*cudaGetTextureAlignmentOffset)(NativeUInt offset, const PTextureReference texref);

extern PACKAGE TcudaError __stdcall (*cudaGetTextureReference)(const PTextureReference texref, const char * symbol);

extern PACKAGE TCudaChannelFormatDesc __stdcall (*cudaCreateChannelDesc)(int x, int y, int z, int w, TCudaChannelFormatKind f);